src/main/java/org/example/isp/correct/ISmtpRequest.java
package org.example.isp.correct;

public interface ISmtpRequest {

    void sendBySmtp();
}
