src/main/java/org/example/isp/bad/IRequest.java
package org.example.isp.bad;

public interface IRequest {

    void sendByHttps();

    void sendBySmtp();

}
